# fty-alert-stats

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Findfty_common.cmake  Findlibsasl2.cmake  Findtntnet.cmake  Jenkinsfile  Makefile.am  README.md  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  license.xml  project.xml
agent/: CMakeLists.txt
agent/src/: fty-alert-stats.cc
builds/check_zproject/: ci_build.sh
builds/cmake/: ci_build.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  fty-alert-stats.adoc
include/: Makefile.am  fty-alert-stats.h  fty_alert_stats_library.h  fty_alert_stats_server.h  ftyactor.h  ftyprotostateholders.h
lib/: CMakeLists.txt
lib/include/: fty_alert_stats_library.h
lib/src/: .valgrind.supp  fty_alert_stats_actor.cc  fty_alert_stats_actor.h  fty_alert_stats_classes.h  fty_alert_stats_server.cc  fty_alert_stats_server.h  fty_proto_stateholders.cc  fty_proto_stateholders.h
lib/tests/: alert_stats.cpp  fty_alert_stats_private_selftest.cc  fty_alert_stats_selftest.cc  main.cc
packaging/debian/: changelog  control  copyright  fty-alert-stats.dsc.obs  fty-alert-stats.install  fty-alert-stats.manpages  libfty-alert-stats-dev.install  libfty-alert-stats0.install  rules
packaging/redhat/: fty-alert-stats.spec
resources/: fty-alert-stats.cfg.in  fty-alert-stats.service.in
src/: .gitignore  Makemodule.am  fty-alert-stats.cc  fty-alert-stats.cfg.in  fty-alert-stats.service.in  fty_actor.h  fty_alert_stats.cc  fty_alert_stats_actor.cc  fty_alert_stats_actor.h  fty_alert_stats_classes.h  fty_alert_stats_private_selftest.c  fty_alert_stats_private_selftest.cc  fty_alert_stats_selftest.cc  fty_alert_stats_server.cc  fty_alert_stats_server.h  fty_proto_stateholders.cc  fty_proto_stateholders.h  ftyactor.cc  ftyprotostateholders.cc  libfty_alert_stats.pc.in
